--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2561,7 +2561,7 @@ blockquote p {
 }
 
 .img-about {
-  width: 324px;
+  width: 550px;
   height: 324px;
   margin-top: 104px;
 }
@@ -2757,6 +2757,121 @@ blockquote p {
 
 .faq-content .accordion .card .card-body p {
   text-align: justify;
+}
+
+/* About Us Page Cards */
+
+.work-together {
+  position: relative;
+}
+
+.work-together .title.title2 {
+  padding: 0 25px 0 25px;
+}
+
+.work-together .title {
+  color: #172231;
+  font-family: "Barlow Condensed", sans-serif;
+  text-transform: uppercase;
+  font-weight: 600;
+  line-height: 1.2;
+  transition: 0.2s ease;
+  margin: 0;
+}
+
+.work-together .heading-border-line {
+  position: relative;
+  height: 4px;
+  border-radius: 0;
+  width: 145px;
+  background: #fd6509;
+  margin-bottom: 2rem;
+  margin-left: 25px;
+}
+
+.work-together .heading-border-line:before {
+  border-radius: 0;
+  right: -32px;
+  position: absolute;
+  content: "";
+  width: 20px;
+  height: 4px;
+  top: 0;
+  background: #fd6509;
+}
+
+.work-together p {
+  margin-left: 25px;
+}
+
+.services-item {
+  padding: 50px 35px 50px 35px;
+  background-color: #ffffff;
+  border-radius: 4px 4px 4px 4px;
+  margin: 0 -10px 0 0;
+  text-align: center;
+  transition: all 0.3s ease;
+  border: black solid 1px;
+  border-radius: 10px;
+  margin-bottom: 3rem;
+}
+
+.services-item:hover {
+  background-color: #7b2683;
+  background-image: url("/aliveantechsolution/assets/images/about/work-07.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: none;
+}
+
+.services-item .services-icon {
+  background-color: #57a6ed;
+  padding: 30px 30px 30px 30px;
+  border-radius: 50%;
+  font-size: 50px;
+  line-height: 50px;
+  display: inline-block;
+  margin-bottom: 30px;
+  position: relative;
+  transition: all 0.3s ease;
+  text-align: center;
+}
+
+.services-item:hover .services-icon {
+  background-color: #ffffff;
+}
+
+.services-item .services-icon .main-img {
+  height: 50px;
+  width: 50px;
+  max-width: unset;
+}
+
+.services-item .services-icon .hover-img {
+  height: 50px;
+  width: 50px;
+  max-width: unset;
+  position: absolute;
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0);
+  transition: all 0.3s ease;
+}
+
+.services-item .services-content .services-text .title {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  margin-bottom: 13px;
+}
+
+.services-item .services-content .services-desc p {
+  color: #444444;
+  margin: 0;
+}
+
+.services-item:hover .services-content .services-desc p {
+  color: #ffffff;
 }
 
 /*# sourceMappingURL=maps/style.css.map */
