ui: create and update the ui design

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2757,6 +2757,7 @@ blockquote p {
 
 .faq-content .accordion .card .card-body p {
   text-align: justify;
+  line-height: 1.8;
 }
 
 /* About Us Page Cards */
